--- a/PTI-Ear-Trainer/View/GameWindow.xaml
+++ b/PTI-Ear-Trainer/View/GameWindow.xaml
@@ -5,7 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PTI_Ear_Trainer.View"
         mc:Ignorable="d"
-        Title="PTI Ear Trainer" Height="500" Width="450">
+        Title="PTI Ear Trainer" Height="500" Width="450" MinHeight="500" MinWidth="450">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="10*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+            <Label x:Name="LabelGuessNumber" Content="1/10" FontSize="20" />
+        </StackPanel>
+        <Label Content="Placeholder" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Height="180"/>
+        <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+            <Button x:Name="ButtonPlay" Content="▶" Foreground="Green" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="40" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonPlay_Click" ToolTip="Replay Interval"/>
+        </StackPanel>
+        <StackPanel Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+            <Button Content="P1" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="m2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="M2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="m3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="M3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="P4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="P5" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="m6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="M6" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="m7" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="M7" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+            <Button Content="P8" HorizontalAlignment="Center" VerticalAlignment="Center" Width="30" Height="30" Click="ButtonInterval_Click" FontWeight="Bold"/>
+        </StackPanel>
+        <StackPanel Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+            <Label x:Name="LabelTimer" Content="1:00" FontSize="20" />
+        </StackPanel>
     </Grid>
 </Window>
