--- a/PTI-Ear-Trainer/View/GameWindow.xaml
+++ b/PTI-Ear-Trainer/View/GameWindow.xaml
@@ -19,8 +19,6 @@
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
             <Label x:Name="LabelGuessNumber" Content="1/10" FontSize="20" />
         </StackPanel>
-        <Label Content="Placeholder" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Height="180"/>
         <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
             <Button x:Name="ButtonPlay" Content="▶" Foreground="Green" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="40" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonPlay_Click" ToolTip="Replay Interval"/>
         </StackPanel>
@@ -41,5 +39,6 @@
         <StackPanel Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
             <Label x:Name="LabelTimer" Content="1:00" FontSize="20" />
         </StackPanel>
+        <local:MusicalNotationIntervalControl HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" IntervalName="Perfect Unison"/>
     </Grid>
 </Window>
