--- a/PTI-Ear-Trainer/View/MainWindow.xaml
+++ b/PTI-Ear-Trainer/View/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PTI_Ear_Trainer"
         mc:Ignorable="d"
-        Title="Ear-Trainer" Height="500" Width="450">
+        Icon="icon.ico"
+    Title="Ear-Trainer" Height="500" Width="450">
     <Grid x:Name="mainmenu">
         <StackPanel VerticalAlignment="Top">
             <Menu Width="Auto" Height="20">
@@ -41,9 +42,9 @@
         <Label x:Name="Game_mode" Content="Game mode" HorizontalAlignment="Left" Margin="64,372,0,0" VerticalAlignment="Top" Height="39" Width="110" FontSize="16" FontWeight="Bold"/>
         <StackPanel HorizontalAlignment="Left" Margin="86,0,0,0" Orientation="Vertical"/>
         <Canvas x:Name="Game_modes" Margin="174,366,92,179">
-            <RadioButton x:Name="competitive" Content="competitve" Canvas.Left="10" Canvas.Top="16"/>
-            <RadioButton x:Name="casual" Content="casual" Canvas.Left="101" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <RadioButton x:Name="practice" Content="practice" Canvas.Left="171" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.024,0.462" />
+            <RadioButton x:Name="competitive" Content="ranked" Canvas.Left="10" Canvas.Top="16" Checked="competitive_Checked"/>
+            <RadioButton x:Name="casual" Content="survival" Canvas.Left="79" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <RadioButton x:Name="practice" Content="practice" Canvas.Left="155" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.024,0.462" />
         </Canvas>
         <Canvas x:Name="Difficulties" Margin="154,326,114,222" >
             <RadioButton x:Name="easy" Content="easy" Canvas.Left="10" Canvas.Top="16"/>
