--- a/PTI-Ear-Trainer/View/GameWindow.xaml
+++ b/PTI-Ear-Trainer/View/GameWindow.xaml
@@ -22,28 +22,24 @@
             <RowDefinition Height="5*"/>
         </Grid.RowDefinitions>
         <Menu>
-            <MenuItem Header="_File">
+            <MenuItem Header="File">
                 <MenuItem x:Name="newGame" Header="New game" HorizontalAlignment="Left" Width="190" Click="NewGame"/>
                 <Separator />
-                <MenuItem x:Name="leaderboard" Header="Leaderboard" HorizontalAlignment="Left" Width="190"/>
-                <MenuItem x:Name="export" Header="Export leaderboard" HorizontalAlignment="Left" Width="190"/>
-                <MenuItem x:Name="reset" Header="Reset leaderboard" HorizontalAlignment="Left" Width="190"/>
+                <MenuItem x:Name="leaderboard" Header="Leaderboard" HorizontalAlignment="Left" Width="190" Click="OpenLeaderboard"/>
+                <MenuItem x:Name="reset" Header="Reset leaderboard" HorizontalAlignment="Left" Width="190" Click="Reset"/>
                 <Separator />
                 <MenuItem x:Name="close" Header="Exit current game" HorizontalAlignment="Left" Width="190" Click="ExitCurrentGame"/>
                 <MenuItem x:Name="appExit" Header="Close" HorizontalAlignment="Left" Width="190" Click="Close"/>
             </MenuItem>
-            <MenuItem Header="_Options">
+            <MenuItem Header="Options">
                 <MenuItem x:Name="windowed" Header="Windowed mode" HorizontalAlignment="Left" Width="180"/>
                 <MenuItem x:Name="bordered" Header="Bordered mode" HorizontalAlignment="Left" Width="180"/>
                 <MenuItem x:Name="fullscreen" Header="Fullscreen" HorizontalAlignment="Left" Width="180"/>
-                <Separator/>
-                <MenuItem x:Name="fontUp" Header="Font size Up" HorizontalAlignment="Left" Width="180"/>
-                <MenuItem x:Name="fontDown" Header="Font size Down" HorizontalAlignment="Left" Width="180"/>
             </MenuItem>
-            <MenuItem Header="_Help">
-                <MenuItem x:Name="tutorial" Header="How to play" HorizontalAlignment="Left" Width="170"/>
+            <MenuItem Header="About">
+                <MenuItem x:Name="tutorial" Header="How to play" HorizontalAlignment="Left" Width="170" Click="OpenHTP"/>
                 <Separator/>
-                <MenuItem x:Name="about" Header="About" HorizontalAlignment="Left" Width="170"/>
+                <MenuItem x:Name="about" Header="About" HorizontalAlignment="Left" Width="170" Click="OpenAbout"/>
             </MenuItem>
         </Menu>
         <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Grid.Column="1">
@@ -51,7 +47,7 @@
         </StackPanel>
         <Label Content="Placeholder" Grid.Row="2"  Height="26" Width="72" />
             <Border BorderBrush="Black" Grid.Row="2" BorderThickness="1"  Width="300" Height="180" />
-            <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Grid.Column="1" Margin="3,0,0,0" Height="40" Width="40">
+        <StackPanel Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Grid.Column="1" Margin="3,0,0,0" Height="40" Width="40">
             <Button x:Name="ButtonPlay" Content="▶" Foreground="Green" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="40" Background="{x:Null}" BorderBrush="{x:Null}" Click="ButtonPlay_Click" ToolTip="Replay Interval"/>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Margin="45,0,0,0" Height="30" Width="395">
